nav menu issues fixed - pullup class was creating the gap when menu was open

--- a/styles/custom/scss/_coreStyles.scss
+++ b/styles/custom/scss/_coreStyles.scss
@@ -154,25 +154,22 @@ header {
 			.navWrapper {
 				//background-color: green;
 				#navBar {
-					background-color: $white;
-					background-size: contain;
-					background-repeat: no-repeat;
-					background-position: bottom;
 					min-height: 100vh; //50vh;
 					min-width: 100vw; //315px;
 					position: absolute;
-					left: 0;
+					left: 100%;
 					top: 0;
 					display: flex;
 					align-items: flex-start;
 					justify-content: flex-start;
 					margin: 0;
 					padding-top: 5px;
-					transform: translateX(150%);
+					opacity: 0;
 					padding-left: 0;
 					transition: all 350ms ease-in-out 350ms;
 					@include frostBG($white);
 					@include shadow;
+					display: none;
 	
 					a,
 					a:visited,
@@ -197,6 +194,14 @@ header {
 					}
 
 					@include bp(lt-m) { // so menu's broken style isnt visible on open/close
+						//opacity: 0;
+						transform: translateX(150%);
+						background-color: $white;
+						display: flex;
+						left: 0;
+
+
+
 						ul {
 							height: 100%;
 							display: flex;
@@ -204,19 +209,21 @@ header {
 							width: 90vw;
 							margin-left: auto;
 							margin-right: auto;
-							margin-top: 10vh;
+							margin-top: 20px;
+
 		
 							li {
 								list-style: none;
-								margin-top: $gap-small;
+								margin: 0;
+								margin-top: calc(#{$gap-small / 2});
 								text-align: center;
-								margin-bottom: $gap-small;
+								margin-bottom: calc(#{$gap-small / 2});
+								//opacity: 0;
 		
 								a.nav-link {
 									text-decoration: none;
 									padding: 10px;
 									color: $color-text !important;
-									opacity: 1;
 								}
 		
 							}
@@ -226,8 +233,19 @@ header {
 					&.open {
 						left: 0;
 						transform: translateX(0%);
-						margin-top: -10px;
-						padding-top: 10px;
+						margin-top: -5px;
+						padding-top: 15px;
+						opacity: 1 !important;
+						background-color: $white;
+
+						ul {
+
+							li {
+								a:link, a, a:active, a:any-link, a:visited {
+									opacity: 1;
+								}
+							}
+						}
 					}
 	
 					
@@ -323,6 +341,11 @@ header {
 					top: 50%;
 					right: 0;
 					transform: translate(-50%, -50%) scale(.75);
+
+					@include bp(s) {
+						right: 30px; //0; 30px is same as padding so its inline
+						transform: translate(-100%, -50%) scale(.75); //moves further out to compensate for padding changes
+					}
 	
 					//::before is top line. relative to .burgermenu. This is initial setup
 					&::before,
